applications/manifests/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress
  namespace: vaultwarden
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - vault.taileb8233.ts.net
  rules:
    - host: vault.taileb8233.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
